[package]
name = "haddock-compose-parser"
version = "0.1.0"
edition = "2021"
description = "Docker Compose parser for haddock"
repository = "https://github.com/seowalex/haddock"
license = "GPL-3.0-only"
keywords = ["podman", "compose", "docker", "docker-compose"]
categories = ["command-line-utilities"]

[lib]
path = "../src/compose.rs"

[dependencies]
anyhow = "1.0.70"
byte-unit = { version = "4.0.19", default-features = false, features = ["serde", "std"] }
console = "0.15.5"
heck = "0.4.1"
humantime = "2.1.0"
indexmap = { version = "1.9.3", features = ["serde"] }
itertools = "0.10.5"
nom = "7.1.3"
once_cell = "1.17.1"
parse-hyperlinks = "0.23.4"
path-absolutize = { version = "3.0.14", features = ["once_cell_cache"] }
petgraph = "0.6.3"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_ignored = "0.1.7"
serde_json = "1.0.95"
serde_with = { version = "2.3.2", features = ["indexmap"] }
serde_yaml = "0.9.21"
shell-words = "1.1.0"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.3.0"
temp-env = "0.3.3"
test-generator = "0.3.1"
